set url to https

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Exist developers
-site_url: http://developer.exist.io/
+site_url: https://developer.exist.io/
 
 theme:
   name: material
